jsoup changelog

*** Release 0.2.0 (pending)
 * New feature: supports Element#wrap(html) and Elements#wrap(html).
 * New selector syntax: supports E + F adjacent sibling selector
 * New selector systax: supports E ~ F preceding sibling selector
 * New: supports Element#elementSiblingIndex()
 
 * Fixed absolute URL resolution issue when a base tag has no href.

*** Release 0.1.2 (2010-Jan-02)
 * Fixed unrecognised tag handler to be more permissive
    <http://github.com/jhy/jsoup/issues/issue/1>


*** Release 0.1.1 (2010-Jan-31)
 * Initial beta release of jsoup