@@ -221,7 +221,7 @@ public class ParserTest {
     @Test public void handlesFrames() {
         String h = "<html><head><script></script><noscript></noscript></head><frameset><frame src=foo></frame><frame src=foo></frameset></html>";
         Document doc = Jsoup.parse(h);
-        assertEquals("<html><head><script></script><noscript></noscript></head><frameset><frame src=\"foo\" /><frame src=\"foo\" /></frameset></html>",
+        assertEquals("<html><head><script></script><noscript></noscript></head><frameset><frame src=\"foo\" /><frame src=\"foo\" /></frameset><body></body></html>",
                 TextUtil.stripNewlines(doc.html()));
     }
 
@@ -240,6 +240,18 @@ public class ParserTest {
         Element a = doc.select("a").first();
         assertEquals("/foo", a.attr("href"));
         assertEquals("http://example.com/foo", a.attr("abs:href"));
+    }
+
+    @Test public void normalisesDocument() {
+        String h = "<!doctype html>One<html>Two<head>Three<link></head>Four<body>Five </body>Six </html>Seven ";
+        Document doc = Jsoup.parse(h);
+        assertEquals("<!doctype html><html><head><link /></head><body>Five Six Seven  One Two Four Three</body></html>",
+                TextUtil.stripNewlines(doc.html()));
+    }
+
+    @Test public void normlisesEmptyDocument() {
+        Document doc = Jsoup.parse("");
+        assertEquals("<html><head></head><body></body></html>",TextUtil.stripNewlines(doc.html()));
     }
 
 
